2016-05-03  Pranjal Jumde  <pjumde@apple.com>

        WorkerGlobalScope's self, location and navigator attributes should not be replaceable
        https://bugs.webkit.org/show_bug.cgi?id=157296
        <rdar://problem/25962738>

        Reviewed by Chris Dumez.

        * http/tests/workers/location-readonly-expected.txt: Added.
        * http/tests/workers/location-readonly.html: Added.
        * http/tests/workers/navigator-readonly-expected.txt: Added.
        * http/tests/workers/navigator-readonly.html: Added.
        * http/tests/workers/self-readonly-expected.txt: Added.
        * http/tests/workers/self-readonly.html: Added.
        * http/tests/workers/worker-location.js: Added.
        * http/tests/workers/worker-navigator.js: Added.
        * http/tests/workers/worker-self.js: Added.

2016-06-17  John Wilander  <wilander@apple.com>

        Ignore case in the check for security origin inheritance
        https://bugs.webkit.org/show_bug.cgi?id=158878

        Reviewed by Alex Christensen.

        * http/tests/dom/window-open-about-uppercase-blank-and-access-document-expected.txt: Added.
        * http/tests/dom/window-open-about-uppercase-blank-and-access-document.html: Added.

2016-06-16  John Wilander  <wilander@apple.com>

        Restrict security origin inheritance to empty, about:blank, and about:srcdoc URLs
        https://bugs.webkit.org/show_bug.cgi?id=158855
        <rdar://problem/26142632>

        Reviewed by Alex Christensen.

        * http/tests/dom/window-open-about-blank-and-access-document-expected.txt: Added.
        * http/tests/dom/window-open-about-blank-and-access-document.html: Added.
        * http/tests/dom/window-open-about-webkit-org-and-access-document-expected.txt: Added.
        * http/tests/dom/window-open-about-webkit-org-and-access-document.html: Added.

2016-05-25  Chris Dumez  <cdumez@apple.com>

        Update dom/Window/messageevent-source-postmessage-reified.html after r201315