@@ -1,6 +1,0 @@
-Test that self is replaceable.
-
-self='PASS': PASS
-self: PASS
-DONE
-
