@@ -1,6 +1,0 @@
-<body>
-<p>Test that self is replaceable.</p>
-<div id=result></div>
-<script src="resources/worker-create-common.js"></script>
-<script src="resources/worker-replace-self.js"></script>
-</body>
